--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,29 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.0.0
+
+license: All Rights Reserved
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/icon.png"
+  adaptive_icon_background: "#001215"
+  adaptive_icon_foreground: "assets/icons/adaptive-foreground-icon.png"
+  min_sdk: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
+
+flutter_native_splash:
+  android: true
+  ios: true
+  color: "#001215"
+  image: "assets/images/splash.png"
+
+
 
 environment:
-  sdk: '>=3.2.2 <4.0.0'
+  sdk: '>=3.1.5 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,6 +54,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.2     #state managment
+  flutter_svg: ^1.1.6      #For loading SVG image into the app.
+  get_it: ^7.6.4
+  equatable: ^2.0.5        #comaparing dart objs
+  intl: ^0.18.1            #date format
+  floor: ^1.4.2            #store data locally
+  flutter_hooks: ^0.20.3
+  retrofit: ^4.0.3         #api managment
+  logger: any  #for logging purpose
+  json_annotation: ^4.8.1
+  dio: ^5.3.3
+  flutter_animate: ^4.2.0+1
+  firebase_auth: ^4.14.1
+  firebase_core: ^2.23.0
+  google_sign_in: ^6.1.6
+  flutter_facebook_auth: ^6.0.3
+  connectivity_plus: ^5.0.2
+  shared_preferences: ^2.2.2
+
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +86,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  retrofit_generator: '>=7.0.0 <8.0.0'
+  json_serializable: ^6.7.1
+  floor_generator: ^1.4.2
+  flutter_native_splash: ^2.3.5
+  flutter_launcher_icons: "^0.13.1"
+  build_runner: '>=2.3.0 <4.0.0'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,9 +104,24 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+    - family: SpaceMono
+      fonts:
+        - asset: assets/fonts/spacemono-bold.ttf
+          weight: 700
+        - asset: assets/fonts/spacemono-regular.ttf
+        - asset: assets/fonts/spacemono-italic.ttf
+          style: italic
+        - asset: assets/fonts/spacemono-bolditalic.ttf
+          weight: 700
+          style: italic
+
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/vectors/
+    - assets/images/
+    - assets/icons/
+    - assets/translations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
